Refactor UI and error handling in inventory, sales, settings, and splash screens; improve code readability and consistency
- Updated error handling to use a consistent format across inventory and sales screens.
- Refactored UI components for better readability and consistency in inventory and sales screens.
- Enhanced settings screen layout and improved currency dialog functionality.
- Cleaned up code formatting and removed unnecessary whitespace in various files.
- Updated pubspec.yaml for better dependency formatting.

--- a/flour_tracker/pubspec.yaml
+++ b/flour_tracker/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flour_tracker
 description: "A mobile app for tracking flour sales"
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -12,18 +12,18 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   # Added dependencies for our flour tracking app
-  sqflite: ^2.3.0  # For local database
-  sqflite_common_ffi: ^2.3.1  # For SQLite support on desktop platforms
-  sqlite3_flutter_libs: ^0.5.20  # Bundles SQLite with the app
-  path_provider: ^2.1.1  # For file system access
-  provider: ^6.1.1  # For state management
-  intl: ^0.19.0  # For date/time formatting
-  shared_preferences: ^2.2.2  # For saving app preferences
-  fl_chart: ^0.66.0  # For sales charts and graphs
-  image_picker: ^1.0.4  # For picking images from gallery/camera
-  pdf: ^3.10.7  # For generating PDF reports and invoices
-  printing: ^5.11.1  # For printing functionality
-  http: ^1.1.2  # For API calls
+  sqflite: ^2.3.0 # For local database
+  sqflite_common_ffi: ^2.3.1 # For SQLite support on desktop platforms
+  sqlite3_flutter_libs: ^0.5.20 # Bundles SQLite with the app
+  path_provider: ^2.1.1 # For file system access
+  provider: ^6.1.1 # For state management
+  intl: ^0.19.0 # For date/time formatting
+  shared_preferences: ^2.2.2 # For saving app preferences
+  fl_chart: ^0.66.0 # For sales charts and graphs
+  image_picker: ^1.0.4 # For picking images from gallery/camera
+  pdf: ^3.10.7 # For generating PDF reports and invoices
+  printing: ^5.11.1 # For printing functionality
+  http: ^1.1.2 # For API calls
   flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
@@ -33,11 +33,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   # To add assets to your application
   assets:
     - assets/images/
-  
+
   # To add custom fonts to your application
   # fonts:
   #   - family: Schyler
