Add localization support and expense management features
- Implemented localization for the settings screen and various app texts using AppTranslations.
- Added a new Expense model to manage daily expenses with CRUD operations in the database.
- Created an ExpensesScreen to display, add, edit, and delete expenses.
- Updated database schema to include an expenses table and modified existing tables for compatibility.
- Enhanced settings screen with options for date format and language selection.
- Improved user experience with snack bars for feedback on actions.
- Added localization for new features and ensured existing texts are translated.

--- a/flour_tracker/pubspec.yaml
+++ b/flour_tracker/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   # Added dependencies for our flour tracking app
   sqflite: ^2.3.0 # For local database
